kubernetes/apps/syncthing/service-sync.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing-sync
  namespace: apps
  labels:
    app.kubernetes.io/name: syncthing
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: syncthing
  ports:
    - name: sync
      port: 22000
      targetPort: sync
      protocol: TCP
    - name: discovery
      port: 21027
      targetPort: discovery
      protocol: UDP
