kubernetes/apps/syncthing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing
  namespace: apps
  labels:
    app.kubernetes.io/name: syncthing
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: syncthing
  ports:
    - name: gui
      port: 8384
      targetPort: gui
      protocol: TCP
