kubernetes/apps/syncthing/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: syncthing
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`syncthing.home.mcnees.me`)
      kind: Rule
      middlewares:
        - name: oauth2-proxy
          namespace: auth
      services:
        - name: syncthing
          port: 8384
  tls:
    secretName: legacy-home-wildcard-tls
